# pdf-ocr-poc

./: .gitignore  Makefile  README.ko.md  README.md  postprocess.example.json  pyproject.toml
configs/profiles/: fast.yaml  quality.yaml
docs/: eval_rules.md  experiment-results.md  luxshot-analysis.md  prd-ab-report.md  v2-ocr-improvement-todo.md  v2-rewrite-plan.md
fixtures/gold/: README.md
fixtures/gold/v1/: gold-pages.json
schema/: ocr-page-v1.json
scripts/: compare_scores.sh  eval_metrics.py  generate_prd_ab_report.py  run_baseline.sh  run_candidate.sh  run_candidate_apple_vision.sh  verify_local_only.sh
src/pdf_ocr_poc/: batch_runner.py  block_classifier.py  cli.py  evaluation.py  metrics.py  models.py  network_guard.py  network_monitor.py  normalization.py  pdf_images.py  pipeline.py  profiles.py  reporting.py  schema_validation.py
src/pdf_ocr_poc/adapters/: __init__.py  apple_vision.py  base.py  paddle.py  tesseract.py
tests/: test_apple_vision_adapter.py  test_batch_runner.py  test_block_classifier.py  test_cli_compare.py  test_evaluation.py  test_fixture_integration.py  test_fixture_integration_pages.py  test_metrics.py  test_models.py  test_network_guard.py  test_network_monitor.py  test_normalization.py  test_pdf_images.py  test_pipeline.py  test_pipeline_run_stub.py  test_profiles.py  test_schema_validation.py  test_tesseract_utils.py
v2/: README.md  corrected-pages.schema.json  go.mod  postprocess-provider.schema.json  provider-contract.schema.json
v2/cmd/ocrpoc-benchmax/: main.go  main_test.go
v2/cmd/ocrpoc-benchshard/: main.go  (+1 more)
(+34 files in other folders)
